[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/hieroglyph.gd" type="Script" id=1]
[ext_resource path="res://scenes/egypt/pyramidBack.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/impact.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/images/pyramid/Hiero.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/tahoma.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/readyBtn.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/SkipBtn.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.929412, 0.164706, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.0862745, 0.580392, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0.431373, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.584314, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.956863, 0.929412, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.466667, 0.466667, 0.466667, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.278431, 0, 0.670588, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.25098, 0.713726, 0.12549, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0.815686, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=12]
size = 31
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=13]
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("Hiero:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 6.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 331.736, 340 ), Vector2( 513.736, 340 ), Vector2( 513.736, 340 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hiero:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 6.5, 7.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=14]
size = 27
font_data = ExtResource( 3 )

[node name="hieroglyph" type="Node2D"]
script = ExtResource( 1 )

[node name="pyramidBack" parent="." instance=ExtResource( 2 )]

[node name="Label" type="Label" parent="."]
margin_left = 225.97
margin_top = 23.8564
margin_right = 746.97
margin_bottom = 97.8564
custom_fonts/font = SubResource( 1 )
text = "CHOOSE YOUR COLORS"

[node name="color1" type="Panel" parent="."]
margin_left = 627.104
margin_top = 114.834
margin_right = 799.104
margin_bottom = 134.834
custom_styles/panel = SubResource( 2 )

[node name="color10" type="Panel" parent="."]
margin_left = 811.104
margin_top = 114.834
margin_right = 983.104
margin_bottom = 134.834
custom_styles/panel = SubResource( 3 )

[node name="color2" type="Panel" parent="."]
margin_left = 245.104
margin_top = 114.834
margin_right = 417.104
margin_bottom = 134.834
custom_styles/panel = SubResource( 4 )

[node name="color3" type="Panel" parent="."]
margin_left = 245.104
margin_top = 157.617
margin_right = 417.104
margin_bottom = 177.617
custom_styles/panel = SubResource( 5 )

[node name="color4" type="Panel" parent="."]
margin_left = 627.104
margin_top = 157.617
margin_right = 799.104
margin_bottom = 177.617
custom_styles/panel = SubResource( 6 )

[node name="color9" type="Panel" parent="."]
margin_left = 811.104
margin_top = 157.617
margin_right = 983.104
margin_bottom = 177.617
custom_styles/panel = SubResource( 7 )

[node name="color5" type="Panel" parent="."]
margin_left = 55.104
margin_top = 114.834
margin_right = 227.104
margin_bottom = 134.834
custom_styles/panel = SubResource( 8 )

[node name="color6" type="Panel" parent="."]
margin_left = 436.104
margin_top = 114.834
margin_right = 608.104
margin_bottom = 134.834
custom_styles/panel = SubResource( 9 )

[node name="color7" type="Panel" parent="."]
margin_left = 436.104
margin_top = 157.617
margin_right = 608.104
margin_bottom = 177.617
custom_styles/panel = SubResource( 10 )

[node name="color8" type="Panel" parent="."]
margin_left = 55.104
margin_top = 157.617
margin_right = 227.104
margin_bottom = 177.617
custom_styles/panel = SubResource( 11 )

[node name="Hiero" type="Sprite" parent="."]
position = Vector2( 513.736, 340 )
scale = Vector2( 0.660229, 0.660229 )
texture = ExtResource( 4 )

[node name="Label2" type="Label" parent="."]
margin_left = 48.7004
margin_top = 494.173
margin_right = 979.7
margin_bottom = 544.173
custom_fonts/font = SubResource( 12 )
text = "A HIEROGLYPH PACK WILL BE SENT IN YOUR CHAT"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "load"
anims/load = SubResource( 13 )

[node name="readyBtn" parent="." instance=ExtResource( 6 )]
margin_left = 898.0
margin_top = 493.0
margin_right = 982.0
margin_bottom = 532.0
custom_fonts/font = SubResource( 14 )
text = "Next"

[node name="SkipBtn" parent="." instance=ExtResource( 7 )]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="readyBtn" to="." method="_on_readyBtn_pressed"]
[connection signal="pressed" from="SkipBtn" to="." method="_on_SkipBtn_pressed"]
